# LingmoUI2

./: .gitignore  CMakeLists.txt  Main.qml  THIRD_PARTY_COPYRIGHT.txt  main.cpp
Src/: CMakeLists.txt  LingmoApp.cpp  LingmoApp.hpp  LingmoUI.cpp  LingmoUI.hpp  singleton.hpp  stdafx.hpp
Src/.cmake/: GetQmlInstallDir.cmake  MakeTranslationTarget.cmake  QmlPlugin.cmake  version_dll.rc.in
